--- a/lambda/BUILD.bazel
+++ b/lambda/BUILD.bazel
@@ -72,6 +72,7 @@ compiler_module(
     struct = "debuginfo.ml",
     sig    = "Debuginfo_cmi",
     opts = MODULE_OPTS,
+    warnings = ["-fragile-match"],
     deps   = [
         "//parsing:Location",
         "//typing:Ident",
@@ -114,7 +115,13 @@ compiler_module(
     name   = "Lambda",
     struct = "lambda.ml",
     sig    = "Lambda_cmi",
-    opts = MODULE_OPTS + ["-w", "-40"], ## name-out-of-scope
+    opts = MODULE_OPTS,
+    warnings = [
+        "-disambiguated-name",
+        "-fragile-match",
+        "-missing-record-field-pattern",
+        "-name-out-of-scope"
+    ],
     deps   = [
         "//parsing:Longident",
         "//typing:Env",
@@ -171,7 +178,14 @@ compiler_module(
     name   = "Matching",
     struct = "matching.ml",
     sig    = "Matching_cmi",
-    opts = MODULE_OPTS + ["-w", "-40"], ## name-out-of-scope
+    opts = MODULE_OPTS,
+    warnings = [
+        "-ambiguous-name",
+        "-disambiguated-name",
+        "-fragile-match",
+        "-name-out-of-scope",
+        "-missing-record-field-pattern",
+    ],
     deps   = [
         "//parsing:Location",
         "//parsing:Longident",
@@ -226,7 +240,13 @@ compiler_module(
     name   = "Printlambda",
     struct = "printlambda.ml",
     sig    = "Printlambda_cmi",
-    opts = MODULE_OPTS + ["-w", "-40"], ## name-out-of-scope
+    opts = MODULE_OPTS,
+    warnings = [
+        "-disambiguated-name",
+        "-fragile-match",
+        "-missing-record-field-pattern",
+        "-name-out-of-scope",
+    ],
     deps   = [
         "//parsing:Location",
         "//typing:Ident",
@@ -334,6 +354,11 @@ compiler_module(
     struct = "simplif.ml",
     sig    = "Simplif_cmi",
     opts = MODULE_OPTS,
+    warnings = [
+        "-fragile-match",
+        "-missing-record-field-pattern",
+        "-open-shadow-label-constructor",
+    ],
     deps   = [
         "//parsing:Location",
         "//typing:Ident",
@@ -377,7 +402,8 @@ compiler_module(
     struct = "switch.ml",
     sig    = "Switch_cmi",
     opts = MODULE_OPTS,
-    open   = ["//stdlib:Stdlib"],
+    warnings = ["-missing-record-field-pattern"],
+    # open   = ["//stdlib:Stdlib"],
     stdlib_deps   = [
         "//stdlib:Stdlib",
         "//stdlib:Stdlib.Array",
@@ -406,7 +432,15 @@ compiler_module(
     name   = "Tmc",
     struct = "tmc.ml",
     sig    = "Tmc_cmi",
-    opts = MODULE_OPTS + ["-w", "-40"], ## name-out-of-scope
+    opts = MODULE_OPTS,
+    warnings = [
+        "-ambiguous-name",
+        "-disambiguated-name",
+        "-fragile-match",
+        "-name-out-of-scope",
+        "-missing-record-field-pattern",
+        "-open-shadow-label-constructor",
+    ],
     deps   = [
         ":Lambda"
     ],
@@ -429,6 +463,12 @@ compiler_module(
     struct = "translattribute.ml",
     sig    = "Translattribute_cmi",
     opts = MODULE_OPTS,
+    warnings = [
+        "-disambiguated-name",
+        "-fragile-match",
+        "-missing-record-field-pattern",
+        "-open-shadow-label-constructor",
+    ],
     deps   = [
         "//config:Config",
         "//parsing:Location",
@@ -466,6 +506,15 @@ compiler_module(
     struct = "translclass.ml",
     sig    = "Translclass_cmi",
     opts = MODULE_OPTS,
+    warnings = [
+        # "-ambiguous-name",
+        # "-disambiguated-name",
+        "-fragile-match",
+        # "-name-out-of-scope",
+        "-missing-record-field-pattern",
+        "-open-shadow-identifier",
+        "-open-shadow-label-constructor",
+    ],
     deps   = [
         "//parsing:Location",
         "//typing:Btype",
@@ -511,7 +560,15 @@ compiler_module(
     name   = "Translcore",
     struct = "translcore.ml",
     sig    = "Translcore_cmi",
-    opts = MODULE_OPTS + ["-w", "-40"], ## name-out-of-scope
+    opts = MODULE_OPTS,
+    warnings = [
+        "-ambiguous-name",
+        "-disambiguated-name",
+        "-fragile-match",
+        "-name-out-of-scope",
+        "-missing-record-field-pattern",
+        "-open-shadow-label-constructor",
+    ],
     deps   = [
         "//config:Config",
         "//parsing:Location",
@@ -549,6 +606,7 @@ compiler_signature(
     name = "Translcore_cmi",
     src  = "translcore.mli",
     opts = SIG_OPTS,
+    warnings = ["-open-shadow-identifier"],
     deps   = [
         "//parsing:Asttypes_cmi",
         "//parsing:Location_cmi",
@@ -570,6 +628,15 @@ compiler_module(
     struct = "translmod.ml",
     sig    = "Translmod_cmi",
     opts = MODULE_OPTS,
+    warnings = [
+        "-ambiguous-name",
+        "-disambiguated-name",
+        "-fragile-match",
+        # "-name-out-of-scope",
+        "-missing-record-field-pattern",
+        # "-open-shadow-identifier",
+        "-open-shadow-label-constructor",
+    ],
     deps   = [
         "//parsing:Location",
         "//typing:Ctype",
@@ -628,7 +695,12 @@ compiler_module(
     name   = "Translobj",
     struct = "translobj.ml",
     sig    = "Translobj_cmi",
-    opts = MODULE_OPTS + ["-w", "-40"], ## name-out-of-scope
+    opts = MODULE_OPTS,
+    warnings = [
+        "-fragile-match",
+        "-name-out-of-scope",
+        "-disambiguated-name"
+    ],
     deps   = [
         "//config:Config",
         "//typing:Btype",
@@ -667,6 +739,11 @@ compiler_module(
     struct = "translprim.ml",
     sig    = "Translprim_cmi",
     opts = MODULE_OPTS,
+    warnings = [
+        "-fragile-match",
+        "-missing-record-field-pattern",
+        "-open-shadow-label-constructor",
+    ],
     deps   = [
         "//config:Config",
         "//parsing:Location",
