--- a/bytecomp/BUILD.bazel
+++ b/bytecomp/BUILD.bazel
@@ -107,19 +107,14 @@ compiler_module(
     name   = "Bytegen",
     struct = "bytegen.ml",
     sig    = "Bytegen_cmi",
-    opts = MODULE_OPTS + [
-        # "-w", "+a-4-9-40-41-42-44-45-48",
-        # "-w", "+a",
-        # "-warn-error", "@a",
-        # "-w", "-4-9-32-41-42-44"
-    ],
     warnings = [
-        w.AMBIGUOUS_NAME_41,
-        w.DISAMBIGUATED_NAME_42,
-        w.OPEN_SHADOW_IDENTIFIER_44,
-        w.FRAGILE_MATCH_4,
-        w.MISSING_RECORD_FIELD_PATTERN_9,
-        w.UNUSED_VALUE_DECLARATION_32,
+        "ambiguous-name",
+        "disambiguated-name",
+        "fragile-match",
+        "name-out-of-scope",
+        "open-shadow-identifier",
+        "open-shadow-label-constructor",
+        "missing-record-field-pattern",
     ],
     stdlib_deps = [
         "//stdlib:Stdlib.Array",
@@ -200,6 +195,15 @@ compiler_module(
     struct = "bytelink.ml",
     sig    = "Bytelink_cmi",
     opts = MODULE_OPTS,
+    warnings = [
+        # "-ambiguous-name",
+        # "-disambiguated-name",
+        "-fragile-match",
+        # "-name-out-of-scope",
+        # "-missing-record-field-pattern",
+        # "-open-shadow-identifier",
+        # "-open-shadow-label-constructor",
+    ],
     deps   = [
         "//bytecomp:Opcodes",
         "//config:Config",
@@ -252,6 +256,15 @@ compiler_module(
     struct = "bytepackager.ml",
     sig    = "Bytepackager_cmi",
     opts = MODULE_OPTS,
+    warnings = [
+        # "-ambiguous-name",
+        # "-disambiguated-name",
+        "-fragile-match",
+        # "-name-out-of-scope",
+        "-missing-record-field-pattern",
+        # "-open-shadow-identifier",
+        # "-open-shadow-label-constructor",
+    ],
     deps   = [
         "//config:Config",
         "//lambda:Printlambda",
@@ -367,6 +380,15 @@ compiler_module(
     struct = "emitcode.ml",
     sig    = "Emitcode_cmi",
     opts = MODULE_OPTS,
+    warnings = [
+        # "-ambiguous-name",
+        # "-disambiguated-name",
+        "-fragile-match",
+        # "-name-out-of-scope",
+        "-missing-record-field-pattern",
+        # "-open-shadow-identifier",
+        # "-open-shadow-label-constructor",
+    ],
     deps   = [
         "//config:Config",
         "//lambda:Translmod",
@@ -608,6 +630,9 @@ compiler_module(
     struct = "printinstr.ml",
     sig    = "Printinstr_cmi",
     opts = MODULE_OPTS,
+    warnings = [
+        "-fragile-match",
+    ],
     deps   = [
         "//lambda:Lambda",
         "//lambda:Printlambda",
@@ -644,6 +669,10 @@ compiler_module(
     struct = "symtable.ml",
     sig    = "Symtable_cmi",
     opts = MODULE_OPTS,
+    warnings = [
+        "-disambiguated-name",
+        "-fragile-match",
+        "-open-shadow-identifier"],
     deps   = [
         "//config:Config",
         "//lambda:Runtimedef",
