--- a/driver/BUILD.bazel
+++ b/driver/BUILD.bazel
@@ -74,6 +74,10 @@ compiler_module(
     struct = "compenv.ml",
     sig    = "Compenv_cmi",
     opts = MODULE_OPTS,
+    warnings = [
+        "-fragile-match",
+        "-missing-record-field-pattern"
+    ],
     deps   = [
         "//config:Config",
         "//parsing:Location",
@@ -112,7 +116,15 @@ compiler_module(
     struct = "compile.ml",
     sig    = "Compile_cmi",
     opts = MODULE_OPTS,
-    warnings = [w.NAME_OUT_OF_SCOPE_40],
+    warnings = [
+        # "-ambiguous-name",
+        "-disambiguated-name",
+        "-fragile-match",
+        "-name-out-of-scope",
+        "-missing-record-field-pattern",
+        # "-open-shadow-identifier",
+        # "-open-shadow-label-constructor",
+    ],
     deps   = [
         "//bytecomp:Bytegen",
         "//bytecomp:Emitcode",
@@ -150,7 +162,15 @@ compiler_module(
     struct = "compile_common.ml",
     sig    = "Compile_common_cmi",
     opts = MODULE_OPTS,
-    warnings = [w.NAME_OUT_OF_SCOPE_40],
+    warnings = [
+        # "-ambiguous-name",
+        "-disambiguated-name",
+        # "-fragile-match",
+        "-name-out-of-scope",
+        # "-missing-record-field-pattern",
+        # "-open-shadow-identifier",
+        # "-open-shadow-label-constructor",
+    ],
     deps   = [
         "//config:Config",
         "//parsing:Builtin_attributes",
@@ -198,6 +218,15 @@ compiler_module(
     struct = "compmisc.ml",
     sig    = "Compmisc_cmi",
     opts = MODULE_OPTS,
+    warnings = [
+        # "-ambiguous-name",
+        # "-disambiguated-name",
+        # "-fragile-match",
+        # "-name-out-of-scope",
+        "-missing-record-field-pattern",
+        # "-open-shadow-identifier",
+        # "-open-shadow-label-constructor",
+    ],
     deps   = [
         "//config:Config",
         "//parsing:Location",
@@ -285,6 +314,9 @@ compiler_module(
     struct = "main_args.ml",
     sig    = "Main_args_cmi",
     opts = MODULE_OPTS,
+    warnings = [
+        "-disambiguated-name",
+    ],
     deps   = [
         "//config:Config",
         "//parsing:Location",
@@ -327,7 +359,15 @@ compiler_module(
     struct = "maindriver.ml",
     sig    = "Maindriver_cmi",
     opts = MODULE_OPTS,
-    warnings = [w.NAME_OUT_OF_SCOPE_40],
+    warnings = [
+        # "-ambiguous-name",
+        "-disambiguated-name",
+        # "-fragile-match",
+        "-name-out-of-scope",
+        # "-missing-record-field-pattern",
+        # "-open-shadow-identifier",
+        # "-open-shadow-label-constructor",
+    ],
     deps   = [
         "//bytecomp:Bytelibrarian",
         "//bytecomp:Bytepackager",
@@ -369,7 +409,12 @@ compiler_module(
     struct = "makedepend.ml",
     sig    = "Makedepend_cmi",
     opts = MODULE_OPTS,
-    warnings = [w.NAME_OUT_OF_SCOPE_40],
+    warnings = [
+        "-fragile-match",
+        "-disambiguated-name",
+        "-name-out-of-scope",
+        "-open-shadow-identifier",
+    ],
     deps   = [
         "//config:Config",
         "//parsing:Depend",
