--- a/stdlib/BUILD.bazel
+++ b/stdlib/BUILD.bazel
@@ -198,10 +198,7 @@ stdlib_internal_module(
     name   = "CamlinternalFormat",
     struct = "camlinternalFormat.ml",
     sig    = "CamlinternalFormat_cmi",
-    warnings = select({
-        "//config/target/executor:vm_executor?": ["fragile-match"],
-        "//conditions:default": []
-    }),
+    warnings = ["-fragile-match"],
     stdlib_deps   = [
         ":CamlinternalFormatBasics",
         ":Stdlib.Buffer",
@@ -278,7 +275,7 @@ stdlib_internal_module(
     name   = "CamlinternalMod",
     struct = "camlinternalMod.ml",
     sig    = "CamlinternalMod_cmi",
-    # opts = ["-open", "Stdlib"],
+    warnings = ["-fragile-match"],
     stdlib_deps   = [
         ":CamlinternalOO", ## (CamlinternalOO)
         ":CamlinternalLazy", ## (CamlinternalOO)
@@ -310,6 +307,7 @@ stdlib_internal_module(
         # ],
         "//conditions:default": []
     }),
+    warnings = ["-ambiguous-name"],
     stdlib_deps   = [
         ":Stdlib.Sys",
         ":Stdlib.String",
@@ -335,6 +333,7 @@ stdlib_module(
     struct = "arg.ml",
     sig    = "Stdlib.Arg_cmi",
     opts = MODULE_OPTS,
+    warnings = ["-fragile-match"],
     stdlib_deps   = [
         ":Stdlib.Sys",
         ":Stdlib.String",
@@ -757,10 +756,7 @@ stdlib_module(
         "//config/target/executor:vm_executor?": [],
         "//conditions:default": []
     }),
-    warnings = select({
-        "//config/target/executor:vm_executor?": ["+A", "-fragile-match"],
-        "//conditions:default": []
-    }),
+    warnings = ["-fragile-match"],
     stdlib_deps   = [
         ":CamlinternalFormat",
         ":CamlinternalFormatBasics",
@@ -862,6 +858,7 @@ stdlib_module(
     struct = "hashtbl.ml",
     sig    = "Stdlib.Hashtbl_cmi",
     opts = MODULE_OPTS,
+    warnings = ["-missing-record-field-pattern"],
     stdlib_deps   = [
         ":Stdlib.Array",
         ":Stdlib.Int",
@@ -1031,6 +1028,10 @@ stdlib_module(
     struct = "map.ml",
     sig    = "Stdlib.Map_cmi",
     opts = MODULE_OPTS,
+    warnings = [
+        "-fragile-match",
+        "-missing-record-field-pattern"
+    ],
     stdlib_deps   = [
         ":Stdlib.List",
         ":Stdlib.Seq",
@@ -1241,6 +1242,7 @@ stdlib_module(
     struct = "printexc.ml",
     sig    = "Stdlib.Printexc_cmi",
     opts = MODULE_OPTS,
+    warnings = ["-missing-record-field-pattern"],
     stdlib_deps   = [
         ":Stdlib",
         ":Stdlib.Array",
@@ -1296,6 +1298,7 @@ stdlib_module(
     struct = "queue.ml",
     sig    = "Stdlib.Queue_cmi",
     opts = MODULE_OPTS,
+    warnings = ["-missing-record-field-pattern"],
     stdlib_deps   = [
         ":Stdlib",
         ":Stdlib.Seq",
@@ -1314,6 +1317,7 @@ stdlib_module(
     struct = "random.ml",
     sig    = "Stdlib.Random_cmi",
     opts = MODULE_OPTS,
+    warnings = ["-open-shadow-identifier"],
     stdlib_deps   = [
         ":Stdlib",
         ":Stdlib.Array",
@@ -1346,6 +1350,7 @@ stdlib_module(
     struct = "result.ml",
     sig    = "Stdlib.Result_cmi",
     opts = MODULE_OPTS,
+    warnings = ["-fragile-match"],
     stdlib_deps   = [
         ":Stdlib.Seq",
         # ":Stdlib"
@@ -1441,6 +1446,10 @@ stdlib_module(
     struct = "set.ml",
     sig    = "Stdlib.Set_cmi",
     opts = MODULE_OPTS,
+    warnings = [
+        "-fragile-match",
+        "-missing-record-field-pattern"
+    ],
     stdlib_deps   = [
         ":Stdlib.Seq",
         ":Stdlib.List",
