--- a/testsuite/tests/lib-bigarray/BUILD.bazel
+++ b/testsuite/tests/lib-bigarray/BUILD.bazel
@@ -1,4 +1,5 @@
 load("//test:rules.bzl", "test_module", "batch_test_macro")
+load("//config:WARNINGS.bzl", "w")
 
 test_suite(
     name = "lib-bigarray",
@@ -28,7 +29,8 @@ test_module(
         "//stdlib:Stdlib.Gc",
         "//stdlib:Stdlib.Int64",
         "//stdlib:Stdlib.Printf"
-    ]
+    ],
+    warnings = [w.OPEN_SHADOW_IDENTIFIER_44, w.UNUSED_VAR_STRICT_27]
 )
 
 batch_test_macro(
@@ -59,7 +61,8 @@ batch_test_macro(
 test_module(
     name   = "Fftba",
     struct = "fftba.ml",
-    stdlib_deps   = ["//stdlib:Stdlib.Bigarray"]
+    stdlib_deps   = ["//stdlib:Stdlib.Bigarray"],
+    warnings = [w.UNEXPECTED_DOCSTRING_50, w.UNUSED_FOR_INDEX_35]
 )
 
 batch_test_macro(
