--- a/utils/BUILD.bazel
+++ b/utils/BUILD.bazel
@@ -151,7 +151,8 @@ compiler_module(
     struct = "arg_helper.ml",
     sig    = "Arg_helper_cmi",
     opts = MODULE_OPTS,
-    open   = ["//stdlib:Stdlib"],
+    warnings = ["-ambiguous-name"],
+    # open   = ["//stdlib:Stdlib"],
     stdlib_deps   = [
         "//stdlib:Stdlib.List",
         "//stdlib:Stdlib.Map",
@@ -180,8 +181,13 @@ compiler_module(
     name   = "Binutils",
     struct = "binutils.ml",
     sig    = "Binutils_cmi",
-    open   = ["//stdlib:Stdlib"],
     opts = MODULE_OPTS,
+    warnings = [
+        "-fragile-match",
+        "-ambiguous-name",
+        "-disambiguated-name",
+    ],
+    # open   = ["//stdlib:Stdlib"],
     stdlib_deps   = [
         "//stdlib:Stdlib.Array",
         "//stdlib:Stdlib.Bytes",
@@ -287,6 +293,11 @@ compiler_module(
     struct = "clflags.ml",
     sig    = "Clflags_cmi",
     opts = MODULE_OPTS,
+    warnings = [
+        "-fragile-match",
+        "-disambiguated-name",
+        "-name-out-of-scope"
+    ],
     deps   = [
         "//config:Config",
         ":Arg_helper",
@@ -484,7 +495,10 @@ compiler_module(
     struct = "diffing.ml",
     sig    = "Diffing_cmi",
     opts = MODULE_OPTS,
-    warnings = [w.NAME_OUT_OF_SCOPE_40],
+    warnings = [
+        "-disambiguated-name",
+        "-name-out-of-scope",
+    ],
     open   = ["//stdlib:Stdlib"],
     deps   = [
         ":Misc",
@@ -520,7 +534,11 @@ compiler_module(
     sig    = "Diffing_with_keys_cmi",
     opts = MODULE_OPTS,
     open   = ["//stdlib:Stdlib"],
-    warnings = [w.NAME_OUT_OF_SCOPE_40],
+    warnings = [
+        "-fragile-match",
+        "-disambiguated-name",
+        "-name-out-of-scope",
+    ],
     deps   = [
         ":Diffing",
         ":Misc",
@@ -699,6 +717,7 @@ compiler_module(
     struct = "lazy_backtrack.ml",
     sig    = "Lazy_backtrack_cmi",
     opts = MODULE_OPTS,
+    warnings = ["-fragile-match"],
     open   = ["//stdlib:Stdlib"],
     stdlib_deps   = [
         "//stdlib:Stdlib",
@@ -997,6 +1016,7 @@ compiler_module(
     struct = "targetint.ml",
     sig    = "Targetint_cmi",
     opts = MODULE_OPTS,
+    warnings = ["-open-shadow-identifier"],
     deps   = [
         ":Misc",
     ],
@@ -1050,6 +1070,11 @@ compiler_module(
     struct = "warnings.ml",
     sig    = "Warnings_cmi",
     opts = MODULE_OPTS,
+    warnings = [
+        "-fragile-match",
+        "-disambiguated-name",
+        "-name-out-of-scope"
+    ],
     deps   = [
         ":Misc",
     ],
